Lab-2 added responsiveness and js

--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
                     A university student
                 </h1>
                 <p>
-                    Pore add kormu.
-                    Space Invaders is a 1978 arcade video game developed and released 
-                    by Taito in Japan and distributed by Midway Manufacturing overseas.
-                     The goal is to defeat wave after wave of descending aliens  
+                    I will write something later  
                 </p>
                 <div class="btn-con">
                     <a href="" class="main-btn">
@@ -197,7 +194,7 @@
                         <i class="fa-solid fa-hourglass-start"></i>
                     </div>
                     <p class="tl-duration">2010 - present</p>
-                    <h5>Student <span> - Vircrosoft</span></h5>
+                    <h5>Student <span> - ABC</span></h5>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
                     </p>
@@ -207,7 +204,7 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="tl-duration">2008 - 2011</p>
-                    <h5>Student<span> - Boogle, Inc.</span></h5>
+                    <h5>Student<span> - ABC, Inc.</span></h5>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
                     </p>
@@ -217,7 +214,7 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="tl-duration">2016 - 2017</p>
-                    <h5>C++ Programmer<span> - Slime Tech</span></h5>
+                    <h5>C++ Programmer<span> - ABC</span></h5>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
                     </p>
@@ -227,7 +224,7 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="tl-duration">2009 - 2013</p>
-                    <h5>Student<span> - Sussex University</span></h5>
+                    <h5>Student<span> - ABC</span></h5>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
                     </p>
@@ -237,7 +234,7 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="tl-duration">2013 - 2016</p>
-                    <h5>Computer Science Degree<span> - Brookes University</span></h5>
+                    <h5>Computer Science Degree<span> - ABC</span></h5>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
                     </p>
@@ -247,7 +244,7 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="tl-duration">2017 - present</p>
-                    <h5>3d Animation<span> - Brighton University</span></h5>
+                    <h5>3d Animation<span> - ABC</span></h5>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
                     </p>
@@ -492,6 +489,10 @@
         <div class="control control-5" data-id="contact">
             <i class="fa-solid fa-address-card"></i>
         </div>
+    </div>
+
+    <div class="theme-btn">
+        <i class="fa-solid fa-circle-half-stroke"></i>
     </div>
 
     <!--Script attached-->
